# Machine-learning-project

./: Code.ipynb  Compare_NN_PINN.ipynb  First_Neural_Network.ipynb  Harmonic Oscillator.ipynb  LocalTest.ipynb  Numerical_Solution.ipynb  README.md  damped_oscillator_PINN.ipynb  data.py  data_PINN.py  data_PINN_demo.ipynb  data_demo.ipynb  harmonic_oscillator_PINN.ipynb  harmonic_oscillator_PINN_final.ipynb  harmonic_oscillator_PINN_final_full_opt.ipynb  optimized_model_NN.pt  optimized_model_NN_r.pt  optimized_model_NN_renamed.pt  optimized_model_PINN.pt  optimized_model_PINN_final.pt  optimized_model_PINN_full_opt.pt  optimized_model_PINN_full_opt_20trials.pt  overfitting_experiment_NN_r.txt  overfitting_experiment_PINN-comp.txt  overfitting_experiment_PINN-comp2.txt  overfitting_experiment_PINN_final2.txt  overfitting_experiment_PINN_final_fullopt_20.txt  pyproject.toml  test.ipynb
.ipynb_checkpoints/: Compare_NN_PINN(1)-checkpoint.ipynb  Compare_NN_PINN-checkpoint.ipynb  Harmonic Oscillator-checkpoint.ipynb  LocalTest-checkpoint.ipynb  README-checkpoint.md  data-checkpoint.py  data_PINN-checkpoint.py  data_PINN_demo-checkpoint.ipynb  data_demo-checkpoint.ipynb  diffEq-checkpoint.py  harmonic_oscillator_PINN-checkpoint.ipynb  harmonic_oscillator_PINN_final-checkpoint.ipynb  harmonic_oscillator_PINN_final_full_opt-checkpoint.ipynb  overfitting_experiment_PINN-comp-checkpoint.txt
Information files/: Links  Links.md  Papers.md
Models/: optimized_model_PINN_2.pt  optimized_model_PINN_final2.pt  optimized_model_PINN_full_opt_30trials.pt
Not important/: Code.ipynb
(+4 files in other folders)
